Prevent Other Bookmarks from overlapping with bar.
Adds some right padding to bookmarks bar so there is room for 'Other
Bookmarks' link.

--- a/stylesheets/bookmark.sass
+++ b/stylesheets/bookmark.sass
@@ -58,7 +58,7 @@
 
   .bookmarks-list
     padding-left: 5px
-    padding-right: 0px
+    padding-right: 125px
 
     &.other-bookmarks
       position: absolute
